somedi-usecase/sefarad/k8s/somedi-deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: somedi-web-unstable
spec:
  replicas: 1
  template:
    metadata:
      labels:
        role: somedi-web-unstable
        app: somedi-web.unstable
    spec:
      containers:
      - name: somedi
        image: registry.cluster.gsi.dit.upm.es/sefarad/dashboard-somedi/web:unstable
        imagePullPolicy: Always
        resources:
          limits:
            memory: "512Mi"
            cpu: "500m"
        ports:
          - name: web
            containerPort: 8080
