somedi-usecase/sefarad/k8s/somedi-svc.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: somedi-web-unstable
spec:
  type: ClusterIP
  ports:
    - port: 8080
      protocol: TCP
  selector:
    role: somedi-web-unstable
